--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           fetch_all_tags: true
 
       - name: "Tar files"
-        run: tar -czvf ${{ steps.tag_version.outputs.new_tag }}.tar.gz --exclude='.git*' -C target/release VanillaNextgen 
+        run: tar -czvf ${{ steps.tag_version.outputs.new_tag }}.tar.gz --exclude='.git*' -C target/release ${{ github.workspace }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
