--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
 
 
       - name: "Tar files"
-        run: tar -czvf ${{ github.ref_name }}.tar.gz --exclude='.git*' ${{ github.workspace }}
+        run: tar -czvf ${{ github.ref_name }}.tar.gz --exclude='.git*' .
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
