--- a/minecraft/config/roughlyenoughitems/config.json5
+++ b/minecraft/config/roughlyenoughitems/config.json5
@@ -4,7 +4,7 @@
 		"hiddenFavorites": [],
 		"displayHistory": [],
 		"cheating": false,
-		"favoritesEnabled": true,
+		"favoritesEnabled": false,
 		"reduceMotion": false,
 		"keyBindings": {
 			"useNativeKeybinds": false,
